argocd/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: 
    http:
      paths:
      - backend:
          serviceName: argogrpc
          servicePort: 443
      - backend:
          serviceName: argocd-server
          servicePort: 443
  tls:
  - hosts:
    - argocd.udcp.info
    secretName: argocd-cert
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  virtualhost:
    fqdn: argocd-grpc.udcp.info
    tls:
      passthrough: true
  tcpproxy:
    services:
    - name: argocd-server
      port: 443
